# am-d-model.eu

./: .gitignore  Dockerfile  Pipfile  am-d-model.env  apprunner.yaml  buildspec.yaml  bun.lockb  docker-compose.full.yml  docker-compose.yaml  docker-compose.yml  docker-services.yml  index.html  justfile  package.json  svelte.config.js  tailwind.config.js  vite.config.js
.github/workflows/: eslint.yml
caddy/: Caddyfile  internal_server.conf  proxy_settings.conf
conf/: Caddyfile  caddy_start.sh
docker/nginx/: test.crt  test.key
invenio/: Dockerfile  invenio.cfg
invenio/plugin/: setup.py
repo/: .env.example  .invenio  docker-compose.full.yml  docker-compose.yml  docker-services.yml  index.html  invenio.cfg
repo/docker/pgadmin/: servers.json
repo/site/: setup.cfg
repo/site/am_d_model_data_repository/: views.py
site/: .gitkeep
site/am_d_model_data_repository/: webpack.py
src/: App.svelte  Dockerfile  app.html  hooks.client.js  hooks.server.js  vars.css
src/LandingPage/: BottomCall.scss  BottomCall.svelte  InfoScroll.scss  InfoScroll.svelte  LandingPage.scss  LandingPage.svelte  NavigationFooter.scss  NavigationFooter.svelte  NavigationHeader.scss  Splash.scss  Splash.svelte
src/lib/: constants.js  navigation.js
src/routes/: +layout.svelte  +page.svelte  BottomCall.scss  BottomCall.svelte  InfoScroll.scss  InfoScroll.svelte  LandingPage.scss  NavigationHeader.scss  Splash.scss  Splash.svelte
src/shared_components/: Button.svelte  NavigationFooter.scss  NavigationFooter.svelte  NavigationHeader.scss  NavigationHeader.svelte  ScrollToTop.svelte
(+31 files in other folders)
