
[metadata]
name = am-d-model-data-repository

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    am_d_model_data_repository_views = am_d_model_data_repository.views:create_blueprint
invenio_assets.webpack =
    am_d_model_data_repository_theme = am_d_model_data_repository.webpack:theme
